src/codezine/hello/HelloParser.jjt
//オプション定義
options{
    STATIC=false;
    MULTI=true;
    VISITOR=true;
    NODE_EXTENDS="codezine.hello.BaseNode";
}

//パーサークラスの定義
PARSER_BEGIN(HelloParser)
package codezine.hello.parser;
public class HelloParser{

}
PARSER_END(HelloParser)

//トークンの定義
SKIP:
{
    " " | "\r" | "\t" | "\n"
}
TOKEN:
{
        <HELLO: "hello">
    |   <JAVACC: "javacc">
    |   <JJTREE: "jjtree">
    |   <NAME: (["A"-"Z", "a"-"z"])+>
}

//文法の定義
ASTHello Hello():
{}
{
    <HELLO> Command() { return jjtThis;}
}

void Command() #void :
{}
{
        JavaCC()
    |   JJTree()
    |   Name()
}

void JavaCC():
{}
{
    <JAVACC>
}

void JJTree():
{}
{
    <JJTREE>
}

void Name():
{ Token t;}
{
    t = <NAME> { jjtThis.nodeValue = t.image;}
}
